Navbar alignments fixed

--- a/public/css/index/navbar.css
+++ b/public/css/index/navbar.css
@@ -56,8 +56,8 @@ ul::-webkit-scrollbar-thumb {
   position: absolute;
   /* justify-self: start; */
   transform: translateX(10px);
-  top: 18px;
-  left: 18px;
+  top: 2rem;
+  left: 4rem;
   width: 50px;
   height: 50px;
 }
@@ -281,6 +281,10 @@ input {
     padding: 15px;
   }
 
+  .navbar img{
+    top:16px;
+    left:30px;
+  }
   /* 
     .navbar li:first-child {
       margin-top: 10px;
@@ -529,7 +533,7 @@ input {
 
 .box {
   position: absolute;
-  top: 1.8rem;
+  top: 2.7rem;
   right: 4rem;
 }
 @media screen and (max-width: 715px) {
@@ -545,7 +549,6 @@ input {
 }
 .type-checkbox + label {
   display: block;
-  margin-top: 8px;
   width: 80px;
   height: 45px;
   background-color: white;
